# spark-experiments

./: .gitignore  Dockerfile  README.md  breakdown_spark_event_log.py  build-and-start.sh  check-spark-ui.py  config.ini  config_hdfs.ini  config_hdfs_ycloud.ini  copy-source.sh  docker-compose.yml  launch-spark.sh  pyproject.toml  spark_load.py  start-scripts.py  start-scripts.sh  start-tools.py  submit-job.sh
output_spark_inventory_api/: output-printall-20260104-214400.txt  output-printall-20260104-215147.txt  output-printall-20260104-222940.txt  output-printall-formatted-20251217-221538.txt  output-printall-formatted-20251218-082128.txt  output-printall-formatted-20251218-082407.txt  output-printall-formatted-20260104-211551.txt  output-printall-formatted-20260104-214139.txt  output-printall-formatted-20260104-214400.txt  output-printall-formatted-20260104-215757.txt  output-printall-formatted-20260104-221012.txt  output-printall-formatted-20260104-222940.txt  output-printmeta-printenv-20251217-221553.txt  output-printmeta-printenv-20251218-091849.txt  output-printmeta-printenv-20251218-092101.txt  output-printmeta-printenv-20260104-211551.txt  output-printmeta-printenv-20260104-214139.txt  output-printmeta-printenv-20260104-215147.txt  output-printmeta-printenv-20260104-222818.txt  output-printmeta-printenv-20260104-222940.txt
output_spark_profiler/: app-20251217033957-0000_executors.csv  app-20251217040127-0000_executors.csv  app-20251217040542-0000_executors.csv  app-20251217194613-0000_executors.csv  applications-20251218_1252447443.csv  logs-20251218-124504.txt  (+6 more)
(+153 files in other folders)
