[tool.poetry]
name = "spark-load-generator"
version = "0.1.0"
description = "A simple Spark load generator and event log parser"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"